@@ -1,5 +1,9 @@
 package com.example.account.integration;
 
+import com.example.account.PostgresTestContainer;
+import com.example.account.RabbitTestContainer;
+import com.example.account.domain.accounts.api.model.AccountRequest;
+import com.example.account.domain.accounts.api.model.AccountResponse;
 import com.example.account.domain.accounts.service.AccountService;
 import com.example.account.domain.balances.service.BalanceService;
 import com.example.account.domain.transactions.entity.Transaction;
@@ -13,12 +17,15 @@ import com.example.account.util.enums.EventType;
 import com.example.account.util.exception.EntityNotFoundException;
 import com.example.account.util.exception.InvalidBalanceException;
 import com.example.account.service.RabbitMqSenderService;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import org.junit.ClassRule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit4.SpringRunner;
+import org.testcontainers.containers.PostgreSQLContainer;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
@@ -37,6 +44,12 @@ import static org.mockito.Mockito.verify;
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 public class TransactionServiceIntegrationTest {
 
+    @ClassRule
+    public static PostgreSQLContainer<PostgresTestContainer> postgreSQLContainer = PostgresTestContainer.getInstance();
+
+    @ClassRule
+    public static RabbitTestContainer rabbitTestContainer = RabbitTestContainer.getInstance();
+
     @Autowired
     private TransactionService transactionService;
 
@@ -53,38 +66,49 @@ public class TransactionServiceIntegrationTest {
     private RabbitMqSenderService rabbitMqSenderService;
 
     @Test
-    public void testCreateTransaction() throws InvalidBalanceException, EntityNotFoundException {
+    public void testCreateTransaction() throws InvalidBalanceException, EntityNotFoundException, JsonProcessingException {
         // Set up test data
         UUID accountId = UUID.randomUUID();
-        TransactionRequest transactionRequest = new TransactionRequest(accountId, BigDecimal.valueOf(50.00), Currency.USD, Direction.IN, "Test Transaction");
+        AccountResponse account = accountService.createAccountAndBalances(
+                new AccountRequest(
+                        1001L,
+                        "NL",
+                        List.of(Currency.USD, Currency.EUR)
+                )
+        );
+        TransactionRequest transactionRequest = new TransactionRequest(BigDecimal.valueOf(50.00), Currency.USD, Direction.IN, "Test Transaction");
 
         // Call the method to be tested
-        TransactionResponse response = transactionService.createTransaction(accountId, transactionRequest);
+        TransactionResponse response = transactionService.createTransaction(account.accountId(), transactionRequest);
 
         // Retrieve the transaction from the database using transactionRepository
-        Transaction transaction = transactionRepository.findById(response.getId());
+        Transaction transaction = transactionRepository.findById(response.id());
 
         // Assert the results
         assertNotNull(response);
         assertNotNull(transaction);
         // Add more assertions as needed
 
-        // Verify interactions with balanceService, accountService, and rabbitMqSenderService using Mockito
-        verify(balanceService, times(1)).updateAccountBalance(any(UUID.class), any(BigDecimal.class), any(Direction.class), any(Currency.class));
-        verify(accountService, times(1)).getAccountWithBalances(accountId);
-        verify(rabbitMqSenderService, times(1)).sendMessageToQueue(any(UUID.class), eq(EventType.CREATION));
     }
 
     @Test
-    public void testGetTransactionsForAccount() throws EntityNotFoundException {
+    public void testGetTransactionsForAccount() throws EntityNotFoundException, JsonProcessingException {
         // Set up test data in the database using transactionRepository
         UUID accountId = UUID.randomUUID();
-        Transaction transaction1 = new Transaction(accountId, BigDecimal.valueOf(50.00), Currency.USD, Direction.IN, "Transaction 1");
-        Transaction transaction2 = new Transaction(accountId, BigDecimal.valueOf(30.00), Currency.EUR, Direction.OUT, "Transaction 2");
-        transactionRepository.saveAll(Arrays.asList(transaction1, transaction2));
+        AccountResponse account = accountService.createAccountAndBalances(
+                new AccountRequest(
+                        1001L,
+                        "NL",
+                        List.of(Currency.USD, Currency.EUR)
+                )
+        );
+        Transaction transaction1 = new Transaction(UUID.randomUUID(), account.accountId(), BigDecimal.valueOf(50.00), Currency.USD, Direction.IN, "Transaction 1");
+        Transaction transaction2 = new Transaction(UUID.randomUUID(), account.accountId(), BigDecimal.valueOf(30.00), Currency.EUR, Direction.OUT, "Transaction 2");
+        transactionRepository.insert(transaction1);
+        transactionRepository.insert(transaction2);
 
         // Call the method to be tested
-        List<TransactionResponse> responses = transactionService.getTransactionsForAccount(accountId);
+        List<TransactionResponse> responses = transactionService.getTransactionsForAccount(account.accountId());
 
         // Assert the results
         assertNotNull(responses);
